# Autonomous-Ai-trading-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  MVP_PLAN.md  Readme.md  plan.txt  planV2.txt  readme.txt
.analysis/: architecture_review.md  code_review.md  database_review.md  master_summary.md  security_audit.md
.claude/: gsd-file-manifest.json  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/swarm/: swarm-state.json
.claude/agents/: gsd-code-fixer.md  (+12 more)
.devcontainer/: devcontainer.json
.dvc/: config
.planning/: ROADMAP.md  STATE.md
.swarm/: state.json
config/: settings.py
execution_engine/: pyproject.toml
execution_engine/src/: __init__.py  agents.py  analytics.py  backtester.py  config.py  data_feed.py  db.py  download_data.py  live_executor.py  main.py  models.py  paper_executor.py  risk_manager.py  run_backtest.py  server.py  signal_fusion.py  signal_generator.py  social_intel.py
research_lab/: pyproject.toml
research_lab/.planning/debug/: full-codebase-review.md
research_lab/ppo_tensorboard/PPO_1/: events.out.tfevents.1775590405.Unknown.19964.0
research_lab/ppo_tensorboard/PPO_2/: events.out.tfevents.1775590606.Unknown.6096.0
research_lab/ppo_tensorboard/PPO_3/: events.out.tfevents.1775594224.Unknown.13852.0
research_lab/ppo_tensorboard/PPO_4/: events.out.tfevents.1775595477.Unknown.8540.0
research_lab/ppo_tensorboard/PPO_5/: events.out.tfevents.1775595624.Unknown.24608.0
research_lab/ppo_tensorboard/PPO_6/: events.out.tfevents.1775596683.Unknown.26396.0
research_lab/src/: __init__.py  data_fetcher.py  data_preprocessor.py  feature_engine.py  trading_env.py  train_full.py  train_quick.py
research_lab/src/ppo_tensorboard/PPO_1/: events.out.tfevents.1775325130.Unknown.18068.0
research_lab/src/ppo_tensorboard/PPO_2/: events.out.tfevents.1775325746.Unknown.18500.0
research_lab/src/ppo_tensorboard/PPO_3/: events.out.tfevents.1775326126.Unknown.11456.0
(+138 files in other folders)
