[project]
name = "execution-engine"
version = "0.1.0"
description = "Live trading execution engine with risk management and ccxt integration"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.0",
    "torch>=2.4.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.10.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "structlog>=24.4.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
