[project]
name = "research-lab"
version = "0.1.0"
description = "RL strategy discovery using autoresearch + PPO for quantitative trading"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "gymnasium>=1.0.0",
    "stable-baselines3>=2.4.0",
    "tensorboard>=2.18.0",
    "wandb>=0.18.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "ccxt>=4.4.0",
    "tqdm>=4.67.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
data-pipeline = "research_lab.src.data_preprocessor:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
